# inline-c-v8

./: .gitignore  Makefile.wrapper  cabal.sandbox.config  inline-c-v8.cabal
src/: Main.c  Main.hs
